Find contours in image, display in separate window. Very broken right now.

--- a/Swatcher.csproj
+++ b/Swatcher.csproj
@@ -30,20 +30,32 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="OpenCV.Net">
-      <HintPath>packages\OpenCV.Net.3.2.2\lib\net40\OpenCV.Net.dll</HintPath>
+    <Reference Include="OpenCvSharp.Blob">
+      <HintPath>packages\OpenCvSharp-AnyCPU.2.4.8.20140619\lib\net40\OpenCvSharp.Blob.dll</HintPath>
     </Reference>
+    <Reference Include="OpenCvSharp.CPlusPlus">
+      <HintPath>packages\OpenCvSharp-AnyCPU.2.4.8.20140619\lib\net40\OpenCvSharp.CPlusPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenCvSharp">
+      <HintPath>packages\OpenCvSharp-AnyCPU.2.4.8.20140619\lib\net40\OpenCvSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenCvSharp.Extensions">
+      <HintPath>packages\OpenCvSharp-AnyCPU.2.4.8.20140619\lib\net40\OpenCvSharp.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenCvSharp.UserInterface">
+      <HintPath>packages\OpenCvSharp-AnyCPU.2.4.8.20140619\lib\net40\OpenCvSharp.UserInterface.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="System.Core" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\OpenCV.Net.3.2.2\build\net40\OpenCV.Net.props" />
-  <Import Project="packages\OpenCV.Net.3.2.2\build\net40\OpenCV.Net.targets" />
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <ItemGroup>
     <Folder Include="TestImages\" />
   </ItemGroup>
@@ -78,5 +90,98 @@
     <Content Include="TestImages\f55e6_09G05_WHI.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="dll\x86\msvcp110.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\msvcr110.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\OpenCvSharpExtern.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_calib3d248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_contrib248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_core248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_features2d248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_ffmpeg248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_flann248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_gpu248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_highgui248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_imgproc248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_legacy248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_ml248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_nonfree248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_objdetect248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_ocl248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_photo248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_stitching248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_superres248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_video248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\x86\opencv_videostab248.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="dll\x64\msvcp110.dll" />
+    <None Include="dll\x64\msvcr110.dll" />
+    <None Include="dll\x64\OpenCvSharpExtern.dll" />
+    <None Include="dll\x64\opencv_calib3d248.dll" />
+    <None Include="dll\x64\opencv_contrib248.dll" />
+    <None Include="dll\x64\opencv_core248.dll" />
+    <None Include="dll\x64\opencv_features2d248.dll" />
+    <None Include="dll\x64\opencv_ffmpeg248_64.dll" />
+    <None Include="dll\x64\opencv_flann248.dll" />
+    <None Include="dll\x64\opencv_gpu248.dll" />
+    <None Include="dll\x64\opencv_highgui248.dll" />
+    <None Include="dll\x64\opencv_highgui248d.dll" />
+    <None Include="dll\x64\opencv_imgproc248.dll" />
+    <None Include="dll\x64\opencv_legacy248.dll" />
+    <None Include="dll\x64\opencv_ml248.dll" />
+    <None Include="dll\x64\opencv_nonfree248.dll" />
+    <None Include="dll\x64\opencv_objdetect248.dll" />
+    <None Include="dll\x64\opencv_ocl248.dll" />
+    <None Include="dll\x64\opencv_photo248.dll" />
+    <None Include="dll\x64\opencv_stitching248.dll" />
+    <None Include="dll\x64\opencv_stitching248d.dll" />
+    <None Include="dll\x64\opencv_superres248.dll" />
+    <None Include="dll\x64\opencv_video248.dll" />
+    <None Include="dll\x64\opencv_videostab248.dll" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
